# ShadowHand_MastersDissertation

./: README.md
src/hand_embodiment_pkg/: CMakeLists.txt  package.xml
src/hand_embodiment_pkg/bags/: dynamic_2023-03-16-12-00-05.bag  static_closed_2023-03-16-11-59-50.bag  static_filtred.bag
src/hand_embodiment_pkg/hand_embodiment/__pycache__/: kinematics._fast_matrix_from_axis_angle-138.py38.1.nbc  kinematics._fast_matrix_from_axis_angle-138.py38.nbi
src/hand_embodiment_pkg/launch/: hand_embodiment_shadow.launch  openpose2handkp.launch  plotRVIZ.launch  publishTSV.launch  test0.launch  testHandEmbodiment.launch
src/hand_embodiment_pkg/scripts/: openpose2handkp_msg.py  testHandEmbodiment.py
src/hand_embodiment_pkg/src/: hand_embodiment_shadow.py  plotRVIZ.py  publishTSV.py  test0.py
src/hand_embodiment_pkg/test/data/: recording.tsv
src/human_robot_map/: CMakeLists.txt  package.xml
src/human_robot_map/bags/: paint_quality.bag  static_2023-03-16-11-59-16.bag
src/human_robot_map/include/: bio_ik_v10.h  bio_ik_v12.h  bio_ik_v4.h  bio_ik_v5.h  collision_free_goal copy.h
src/human_robot_map/launch/: bio_ik_v0.launch  bio_ik_v1.launch  bio_ik_v10.launch  bio_ik_v11.launch  bio_ik_v12.launch  bio_ik_v2.launch  bio_ik_v3.launch  bio_ik_v4.launch  bio_ik_v5.launch  bio_ik_v6.launch  bio_ik_v7.launch  bio_ik_v8.launch  get_ur5_shadow_joints.launch  hand_kp_pub.launch  moveit_bioik_map.launch  openpose2handkp.launch  plot_keypoints.launch  underactuation_test.launch
src/human_robot_map/msg/: HandKeypoints.msg
src/human_robot_map/scripts/: get_ur5_shadow_joints.py  openpose2handkp_msg.py
src/human_robot_map/src/: bio_ik_v0.cpp  bio_ik_v1.cpp  bio_ik_v10.cpp  bio_ik_v11.cpp  bio_ik_v12.cpp  bio_ik_v2.cpp  bio_ik_v3.cpp  bio_ik_v4.cpp  bio_ik_v5.cpp  bio_ik_v6.cpp  bio_ik_v7.cpp  bio_ik_v8.cpp  command_shadow.py  command_ur5_shadow.py  hand_kp_pub.cpp  human_hand_kp.txt  human_hand_kp_bio_ik.txt  human_hand_kp_bio_ik_video.txt  human_hand_kp_bio_ik_video_1.txt  plot_keypoints.cpp  shadow_hand_kp.txt  shadow_hand_kp_bio_ik.txt  shadow_hand_kp_bio_ik_video.txt  shadow_hand_kp_bio_ik_video_1.txt  underactuation_modelling_mapping_test.cpp
src/openpose_mujoco/: CMakeLists.txt  package.xml
src/openpose_mujoco/bags/: simulation_vs_real_test.bag
src/openpose_mujoco/launch/: hand_commander_BioIK.launch  hand_commander_DexPilot.launch  hand_commander_DexPilot_v10.launch  hand_commander_DexPilot_v2.launch  hand_commander_DexPilot_v3.launch  hand_commander_DexPilot_v4.launch  hand_commander_DexPilot_v5.launch  hand_commander_DexPilot_v6.launch  hand_commander_DexPilot_v7.launch  hand_commander_DexPilot_vB.launch  hand_commander_Joints_vF.launch  hand_commander_joints.launch  openpose2dexpilot.launch  plot_debug_2D.launch
src/openpose_mujoco/msg/: BodyPart.msg  Frame.msg  Person.msg  Pixel.msg
src/openpose_mujoco/src/: dexPilot.py  dexPilot_v10.py  dexPilot_v3.py  dexPilot_v4.py  dexPilot_v5.py  dexPilot_v6.py  dexPilot_vB.py  dex_pilot_duration_ms.txt  hand_commander_BioIK.py  hand_commander_DexPilot.py  hand_commander_DexPilot_v10.py  hand_commander_DexPilot_v2.py  hand_commander_DexPilot_v3.py  hand_commander_DexPilot_v4.py  hand_commander_DexPilot_v5.py  hand_commander_DexPilot_v6.py  hand_commander_DexPilot_v7.py  hand_commander_DexPilot_vB.py  hand_commander_Joints_vF.py  hand_commander_joints.py  human_hand_kp_dist.txt  human_hand_kp_dist_dex_pilot.txt  plot_debug_2D.py  rotation_matrix_tests.py  shadow_hand_kp_dist.txt  shadow_hand_kp_dist_dex_pilot.txt  simulate_openpose.py  simulate_openpose_once.py  tests.py
src/shadow_pinch_teleop/: CMakeLists.txt  package.xml
src/shadow_pinch_teleop/launch/: clipping_task.launch  get_trans_matrix.launch  hand_commander_pinch.launch  hand_commander_pinch_big_clip.launch  openpose2dexpilot.launch  publish_ur5_tests_v2.launch  run_joints_shadow.launch  send_shadow_joints.launch  ur5_tests.launch  ur5_tests_v2.launch
src/shadow_pinch_teleop/scripts/: follow_line.py  get_trans_matrix.py  test.py
src/shadow_pinch_teleop/src/: clipping_task.py  hand_commander_pinch.py  hand_commander_pinch_big_clip.py  hand_commander_pinch_fist.py  openpose2dexpilot.py  publish_ur5_tests_v2.py  run_joints_shadow.py  send_shadow_joints.py  ur5_tests.py  ur5_tests_v2.py
src/shadow_teleop/: CMakeLists.txt
src/shadow_teleop/src/: interpolate_traj_service.cpp
src/teach_net_teleoperation/: CMakeLists.txt  __init__.py  package.xml
src/teach_net_teleoperation/launch/: get_shadow_joints.launch  run_joints_shadow.launch  send_shadow_joints.launch  teachnet_launch_safe.launch  teachnet_launch_unsafe.launch
src/teach_net_teleoperation/model/: __init__.py  dataset.py  model.py
src/teach_net_teleoperation/src/: demo_robot_safe.py  demo_robot_unsafe.py  demo_teachnet.py  get_shadow_joints.py  run_joints_shadow.py  send_shadow_joints.py
src/teach_net_teleoperation/utils/: __init__.py  seg.py  utils.py
src/teach_net_teleoperation/weights/: README.txt
